<resources>
    <string name="app_name">QuickCalc</string>
    <string name="idioma">Idioma</string>
    <string name="iniciar">Iniciar</string>
    <string name="hist_rico">Histórico</string>
    <string name="bidimensional">Bidimensional</string>
    <string name="tridimensional">Tridimensional</string>
    <string name="a_figura_que_ser_utilizada_para_o_calculo">A figura que será utilizada para o calculo é</string>
    <string name="titulo_triangulos">Que tipo de triangulo é esse?</string>
    <string name="calcular">Calcular</string>
    <string name="enviar_sms">Enviar SMS</string>
    <string name="resultado">Resultado</string>
    <string name="area">Área: </string>
    <string name="nome_da_opera_o">Nome da operação:</string>
    <string name="nome_da_figura">Nome da figura:</string>
    <string name="plano">Plano:</string>
    <string name="aresta">Valor de uma das aresta</string>
    <string name="raio">Valor do raio</string>
    <string name="largura">Valor da largura</string>
    <string name="altura">Valor da altura</string>
    <string name="base">Valor da base</string>
    <string name="volume">Volume: </string>
    <string name="perimetro">Perímetro: </string>
    <string name="nome_da_operacao">Nome da operação</string>
    <string name="ret_ngulo">Retângulo</string>
    <string name="is_sceles">Isósceles</string>
    <string name="equil_tero">Equilátero</string>
    <string name="altura_base">Valor da altura da base</string>
    <string name="largura_base">Largura da base</string>
    <string name="altura_do_prisma">Altura do Prisma</string>
    <string name="comprimento">Comprimento do Prisma</string>
    <string name="salvar">Salvar</string>
    <string name="erroCalcular">"NÃO FOI POSSIVEL CALCULAR: Campos invalidos ou não inseridos. Revise as informações inseridas nos campos."</string>
</resources>