<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipoTrianguloActivity">

    <TextView
        android:id="@+id/textViewTipoTriangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/titulo_triangulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTrianguloReatangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ret_ngulo"
        android:onClick="retangulo"
        app:layout_constraintEnd_toStartOf="@+id/buttonTrianguloIsosceles"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoTriangulo" />

    <Button
        android:id="@+id/buttonTrianguloIsosceles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/is_sceles"
        android:onClick="isosceles"
        app:layout_constraintEnd_toStartOf="@+id/buttonTrianguloEquilatero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTrianguloReatangulo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoTriangulo" />

    <Button
        android:id="@+id/buttonTrianguloEquilatero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/equil_tero"
        android:onClick="equilatero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTrianguloIsosceles"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoTriangulo" />
</android.support.constraint.ConstraintLayout>